--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/src/index.css">
+<link rel="stylesheet" href="./src/index.css">
 </head>
 <body class="bg-gray-50 text-priya-dark">
     <div id="root"></div>
-<script type="module" src="/src/index.tsx"></script>
+<script type="module" src="./src/index.tsx"></script>
 </body>
 </html>
