--- a/index.html
+++ b/index.html
@@ -28,19 +28,16 @@
     </script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
-        body { font-family: 'Inter', sans-serif; overflow-x: hidden; }
-        .spin-wheel {
-            transition: transform 3s cubic-bezier(0.2, 0, 0, 1);
-        }
+        body { font-family: 'Inter', sans-serif; overflow-x: hidden; margin: 0; padding: 0; }
     </style>
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0",
+    "react-router-dom": "https://esm.sh/react-router-dom@7.0.0"
   }
 }
 </script>
@@ -48,6 +45,6 @@
 </head>
 <body class="bg-gray-50 text-priya-dark">
     <div id="root"></div>
-<script type="module" src="src/index.tsx"></script>
+    <script type="module" src="src/index.tsx"></script>
 </body>
 </html>
