--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Priya Adarsh Store</title>
     <style>
-      /* લોડિંગ વખતે બ્લેક સ્ક્રીન રોકવા માટે */
-      body {
+      /* લોડિંગ લોગો અને બ્લેક સ્ક્રીન દૂર કરવા માટે */
+      html, body {
         margin: 0;
         padding: 0;
-        background-color: white !important; /* અહીં સફેદ કલર સેટ કર્યો */
+        background-color: white !important; /* બેકગ્રાઉન્ડ સફેદ રાખશે */
       }
       #root {
-        background-color: white;
+        background-color: white !important;
+      }
+      /* જો કોઈ લોડર હોય તો તેને છુપાવવા માટે */
+      .loading-screen {
+        display: none !important;
       }
     </style>
   </head>
