--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
-const firebaseConfig = {
-  apiKey: "AIzaSyATwi1u2b5HL3w10pI7OGBUiSCKxsja-n0",
-  authDomain: "priyaadarshstore.firebaseapp.com",
-  databaseURL: "https://priyaadarshstore-default-rtdb.firebaseio.com",
-  projectId: "priyaadarshstore",
-  storageBucket: "priyaadarshstore.firebasestorage.app",
-  messagingSenderId: "711284532820",
-  appId: "1:711284532820:web:b24c14cb626161fe19afc1",
-  measurementId: "G-WKJV7EBC61"
-};
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Priya Adarsh Store</title>
+    <style>
+      /* લોડિંગ લોગો અને બ્લેક સ્ક્રીન દૂર કરવા માટે */
+      html, body {
+        margin: 0;
+        padding: 0;
+        background-color: white !important; /* બેકગ્રાઉન્ડ સફેદ રાખશે */
+      }
+      #root {
+        background-color: white !important;
+      }
+      /* જો કોઈ લોડર હોય તો તેને છુપાવવા માટે */
+      .loading-screen {
+        display: none !important;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
