--- a/index.html
+++ b/index.html
@@ -6,7 +6,5 @@
     <title>Priya Adarsh Store</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+    <div i
+      
