Fix HTML structure and add root div

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>Priya Adarsh Store</title>
   </head>
   <body>
-    <div i
-      
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
